@@ -1,21 +1,38 @@
 package fish.payara.codingdojo.playwithloom;
 
+import static java.time.Duration.ofMinutes;
+
+import java.util.concurrent.atomic.AtomicInteger;
+
 /**
  *
  * @author Ondro Mihalyi
  */
 public class Threads {
 
-    public static void main(String[] args) {
-        for (int i = 0; i < 100000; i++) {
-            new Thread(() -> {
+    private static final AtomicInteger activeThreads = new AtomicInteger(0);
+
+    public static void main(String[] args) throws InterruptedException {
+        boolean virtual = args.length > 0 && args[0].equals("-v");
+        final String pid = "" + ProcessHandle.current().pid();
+        int i = 0;
+        while (true) {
+            i++;
+            if (i % (virtual ? 100_000 : 1_000) == 0) {
+                System.out.println("New thread " + i + ", pid = " + pid);
+            }
+            final Thread.Builder threadBuilder = virtual ? Thread.ofVirtual() : Thread.ofPlatform();
+            threadBuilder.name("MyThread-" + i).start(() -> {
                 try {
-                    Thread.sleep(10000);
+                    activeThreads.incrementAndGet();
+                    Thread.sleep(ofMinutes(10));
+                    activeThreads.decrementAndGet();
                 } catch (Exception e) {
 
                 }
-            }, "MyThread-" + i).start();
+            });
         }
-        System.out.println("Active threads: " + Thread.activeCount());
+//        Thread.sleep(Duration.of(100, MILLIS));
+//        System.out.println("Active threads: " + activeThreads.get());
     }
 }
